[tool.poetry]
name = "j-league-app"
version = "0.0.0"
description = "J League Application"
authors = ["Y-oHr-N <kon.y.ohr.n@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.5.2"
matplotlib = "^3.3.0"
numpy = "^1.19.1"
pandas = "~1.0"
requests = "^2.24.0"
streamlit = "^0.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
